openshift-cel/disallow-self-provisioner-binding/.chainsaw-test/crb.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  annotations:
    rbac.authorization.kubernetes.io/autoupdate: "true"
  name: self-provisioners
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: self-provisioner
subjects:
- kind: ServiceAccount
  name: test-kyverno
  namespace: test-kyverno
