openshift-cel/disallow-self-provisioner-binding/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-self-provisioner-binding
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-self-provisioner-binding.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: crb.yaml
  - name: step-03
    try:
    - apply:
        file: crb-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: crb-bad-roleref.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: crb-bad-sub-update.yaml
